Fixed z-index for menu and taskbar so windows are shown below. Added random positions for windows when they are created.

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@ body {
     min-height: 100vh;
 
     background: linear-gradient(45deg, #101010, #202020);
+
+    overflow: hidden;
 }
 
 #app {
